--- a/MazeGame/Views/Login.html
+++ b/MazeGame/Views/Login.html
@@ -6,14 +6,14 @@
     <title>Login</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="navbar.css" rel="stylesheet">
+    <link href="../Scripts/navbar.css" rel="stylesheet">
 
 </head>
 
 <body>
-    <script src="jquery-3.2.1.js"></script>
+    <script src="../Scripts/jquery-3.2.1.js"></script>
     <div class="container">
         <div class="navigationbar"></div>
 
@@ -39,7 +39,7 @@
                     alert(user.Name + " founded");
                 })
                 .fail(function (jqXHR, textStatus, err) {
-                    alert("user doesn;t exist");
+                    alert("user doesn't exist");
                 });
             });
             </script>
@@ -47,8 +47,8 @@
 
     </div> <!-- /container -->
 
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="navbar.js"></script>
+    <script src="../bootstrap/js/bootstrap.min.js"></script>
+    <script src="../Scripts/navbar.js"></script>
 
 </body>
 </html>
