--- a/MazeGame/Views/Register.html
+++ b/MazeGame/Views/Register.html
@@ -6,14 +6,14 @@
     <title>Register</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="navbar.css" rel="stylesheet">
+    <link href="../Scripts/navbar.css" rel="stylesheet">
     <link href="register.css" rel="stylesheet">
 </head>
 
 <body>
-    <script src="jquery-3.2.1.js"></script>
+    <script src="../Scripts/jquery-3.2.1.js"></script>
     <div class="container">
         <div class="navigationbar"></div>
         <form class="form-horizontal">
@@ -95,8 +95,8 @@
         </div>
 
     </div> <!-- /container -->
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="navbar.js"></script>
+    <script src="../bootstrap/js/bootstrap.min.js"></script>
+    <script src="../Scripts/navbar.js"></script>
 
 </body>
 </html>
