--- a/MazeGame/Views/SinglePlayerPage.html
+++ b/MazeGame/Views/SinglePlayerPage.html
@@ -41,13 +41,10 @@
             </div>
             <!--Search algo-->
             <div class="form-group">
-                <div class="dropdown">
-                    <button id="searchAlgo" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Search Algo<span class="caret"></span></button>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">BFS</a></li>
-                        <li><a href="#">DFS</a></li>
-                    </ul>
-                </div>
+                <select name="Search Algo" id="searchAlgo">
+                    <option value="0">BFS</option>
+                    <option value="1">DFS</option>
+                </select>
             </div>
             <!--solve button-->
             <div class="form-group">
