--- a/MazeGame/Views/SinglePlayerPage.html
+++ b/MazeGame/Views/SinglePlayerPage.html
@@ -12,10 +12,11 @@
 <body>
     <script src="../Scripts/jquery-3.2.1.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
-    <script src="../Scripts/navbar.js"></script>
+<script src="../Scripts/navbar.js"></script>
+
     <div class="container body-content">
         <div class="navigationbar"></div>
-        <h2>Single Player Game</h2>
+        <div class="page-header"><h2>Single Player Game</h2></div>
         <div class="col-sm-4 form-horizontal">
             <div class="form-group">
                 <label for="mazeName" class="col-sm-2 control-label">Name</label>
