--- a/MazeGame/Views/SinglePlayerPage.html
+++ b/MazeGame/Views/SinglePlayerPage.html
@@ -12,7 +12,7 @@
 <body>
     <script src="../Scripts/jquery-3.2.1.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
-<script src="../Scripts/navbar.js"></script>
+    <script src="../Scripts/navbar.js"></script>
 
     <div class="container body-content">
         <div class="navigationbar"></div>
@@ -52,12 +52,12 @@
                 <button type="submit" id="solveGame" class="btn btn-default">Solve Game</button>
             </div>
         </div>
-        
+
         <!--canvas-->
         <div class="col-sm-8 text-center">
-            <canvas id="myCanvas" tabindex="1" class="maze-board" width="500" height="500"></canvas>
+            <canvas id="myCanvas" tabindex="1" class="maze-board" width="500" height="500" style="border:2px solid #000000;"></canvas>
         </div>
-        
+
         <script src="../Scripts/jquery-3.2.1.js"></script>
         <script src="../Scripts/JQuery.mazeBoard.js"></script>
         <script src="../Scripts/startSingleGame.js"></script>
