--- a/MazeGame/Views/Register.html
+++ b/MazeGame/Views/Register.html
@@ -16,85 +16,35 @@
     <script src="../Scripts/jquery-3.2.1.js"></script>
     <div class="container">
         <div class="navigationbar"></div>
-        <form class="form-horizontal">
-            <fieldset>
-                <legend class="">Register</legend>
-                <div class="control-group">
-                    <!-- Username -->
-                    <label class="control-label" for="username">Username</label>
-                    <div class="controls">
-                        <input type="text" id="username" name="username" placeholder="" class="input-xlarge">
-                    </div>
+        <fieldset>
+            <legend class="">Register</legend>
+            <form id="register-form" role="form" style="display: block;" data-bind="submit: register">
+                <!--Username-->
+                <div class="form-group">
+                    <input type="text" name="username" id="username" data-bind="value: userName" tabindex="1" class="form-control" placeholder="Username" value="" style="width:25%;margin-top:30px;">
                 </div>
-                <div class="control-group">
-                    <!-- E-mail -->
-                    <label class="control-label" for="email">Email</label>
-                    <div class="controls">
-                        <input type="text" id="email" name="email" placeholder="" class="input-xlarge">
-                    </div>
+                <!--Email-->
+                <div class="form-group">
+                    <input type="text" name="email" id="email" data-bind="value: email" tabindex="1" class="form-control" placeholder="Email" value="" style="width:25%;">
                 </div>
-                <div class="control-group">
-                    <!-- Password-->
-                    <label class="control-label" for="password">Password</label>
-                    <div class="controls">
-                        <input type="password" id="password" name="password" placeholder="" class="input-xlarge">
-                    </div>
+                <!--Password-->
+                <div class="form-group">
+                    <input type="password" name="password" id="password" data-bind="value: password" tabindex="2" class="form-control" placeholder="Password" style="width:25%;">
                 </div>
-                <div class="control-group">
-                    <!-- Confirm Password -->
-                    <label class="control-label" for="password_confirm">Password (Confirm)</label>
-                    <div class="controls">
-                        <input type="password" id="password_confirm" name="password_confirm" placeholder="" class="input-xlarge">
-                        <p><br></p>
-                    </div>
+                <!--Confirm Password-->
+                <div class="form-group">
+                    <input type="password" name="confirm_password" id="confirm_password" data-bind="value: confirm_password" tabindex="2" class="form-control" placeholder="Confirm Password" style="width:25%;">
                 </div>
-                <div class="control-group">
-                    <!-- Button -->
-                    <div class="controls">
-                        <button id="btnAddUser" class="btn btn-success">
-                            Register
-                        </button>
-                    </div>
-                </div>
-                <script>
-                    $("#btnAddUser").click(function () {
-                        if ($("#password").val() == $("#password_confirm").val()) {
-                            var user = {
-                                Name: $("#username").val(),
-                                Password: $("#password").val(),
-                                Email: $("#email").val()
-                            };
-                            var apiUrl = "api/Register";
-                            // TODO: most times adding user doesn't work
-                            $.post(apiUrl, user).done(function () {
-                                alert("User registered successfully");
-                            });
-                        } else {
-                            alert("passwords doesn't match");
-                        }
-                    });
-                </script>
-            </fieldset>
-        </form>
+                <!--Submit button-->
+                <input type="submit" name="register-submit" id="register-submit" class="form-control btn btn-login" value="Register" style="width:25%;margin-top:10px;font-size:17px;">
 
-        <div>
-            <h2>All Users</h2>
-            <ul id="lstUsers"></ul>
-
-            <script>
-                var apiUrl = "api/Register";
-                // Send an AJAX request
-                $.getJSON(apiUrl).done(function (data) {
-                    data.forEach(function (user) {
-                        // Add a list item for the product
-                        $("<li>" + user.Name + ", email: " + user.Email + "</li>")
-                        .appendTo("#lstUsers");
-                    });
-                });
-            </script>
-        </div>
-
+            </form>
+        </fieldset>
     </div> <!-- /container -->
+
+
+    <script src="../Scripts/knockout-3.4.2.js"></script>
+    <script src="../Scripts/app.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
     <script src="../Scripts/navbar.js"></script>
 
