part pf logout still the logout.click not working

--- a/MazeGame/Views/Login.html
+++ b/MazeGame/Views/Login.html
@@ -30,7 +30,7 @@
                 <input type="password" name="password" id="password"  data-bind="value: password" tabindex="2" class="form-control" placeholder="Password" style="width:30%;">
             </div>
             <!--Submit button-->
-            <input type="submit" name="login-submit" id="login-submit" class="form-control btn btn-login" value="Log In" style="width:30%;margin-top:10px;">
+            <input type="submit" name="login-submit" id="login-submit" class="btn btn-login" value="Log In" style="width:30%;margin-top:10px;">
 
         </form>
 
