--- a/MazeGame/Views/Register.html
+++ b/MazeGame/Views/Register.html
@@ -36,7 +36,7 @@
                     <input type="password" name="confirm_password" id="confirm_password" data-bind="value: confirm_password" tabindex="2" class="form-control" placeholder="Confirm Password" style="width:25%;">
                 </div>
                 <!--Submit button-->
-                <input type="submit" name="register-submit" id="register-submit" class="form-control btn btn-login" value="Register" style="width:25%;margin-top:10px;font-size:17px;">
+                <input type="submit" name="register-submit" id="register-submit" class="btn btn-login" value="Register" style="width:25%;margin-top:10px;font-size:17px;">
 
             </form>
         </fieldset>
