--- a/MazeGame/Views/UserRankings.html
+++ b/MazeGame/Views/UserRankings.html
@@ -11,10 +11,12 @@
 </head>
 <body>
 
-<div class="navigationbar"></div>
+<div class="container">
+    <div class="navigationbar"></div>
 
-<div class="panel panel-default">
-    <div class="panel-heading"><h2>Rank Table</h2></div>
+    <div class="panel-heading">
+        <h2>Rank Table</h2>
+    </div>
 
     <table class="table">
         <!-- first static row -->
