--- a/MazeGame/Views/MultiPlayerPage.html
+++ b/MazeGame/Views/MultiPlayerPage.html
@@ -37,12 +37,14 @@
                     <button type="submit" id="joinGame" class="btn btn-default">Join Game</button>
                 </div>
             </div>
+
+            <!--form for starting new game-->
             <div class="form-group">
                 <div class="col-sm-10">
                     <div class="page-header"><h3>Start New Game</h3></div>
                 </div>
             </div>
-
+            
             <div class="form-group">
                 <label for="mazeName" class="col-sm-3 control-label">Name</label>
                 <div class="col-sm-7">
