multiplayer- get list f games

--- a/MazeGame/Views/MultiPlayerPage.html
+++ b/MazeGame/Views/MultiPlayerPage.html
@@ -21,11 +21,11 @@
             <div class="form-group">
                 <label for="games" class="col-sm-3 control-label">Games</label>
                 <div class="col-sm-6">
-                    <div class="dropdown" id="games">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+                    <div class="dropdown" id="dropdown-games">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="btn-menu" data-toggle="dropdown">
                             Games  <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1"></ul>
+                        <ul class="dropdown-menu" id="dropdown" role="menu" aria-labelledby="menu1"></ul>
                     </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                     <div class="page-header"><h3>Start New Game</h3></div>
                 </div>
             </div>
-            
+
             <div class="form-group">
                 <label for="mazeName" class="col-sm-3 control-label">Name</label>
                 <div class="col-sm-7">
@@ -81,5 +81,6 @@
             </div>
         </div>
     </div>
+    <script src="../Scripts/listGames.js"></script>
 </body>
 </html>
