--- a/MazeGame/Views/Login.html
+++ b/MazeGame/Views/Login.html
@@ -13,34 +13,34 @@
 </head>
 
 <body>
-    <script src="../Scripts/jquery-3.2.1.js"></script>
-    <div class="container">
-        <div class="navigationbar"></div>
 
-        <h1>Log in</h1>
-        <h3>Use a local account to log in.</h3>
+<div class="container">
+    <div class="navigationbar"></div>
 
-        <form id="login-form" role="form" style="display: block;" data-bind="submit: login">
-            <!--Username-->
-            <div class="form-group">
-                <input type="text" name="username" id="username"  data-bind="value: userName" tabindex="1" class="form-control" placeholder="Username" value="" style="width:30%;margin-top:30px;">
-            </div>
-            <!--Password-->
-            <div class="form-group">
-                <input type="password" name="password" id="password"  data-bind="value: password" tabindex="2" class="form-control" placeholder="Password" style="width:30%;">
-            </div>
-            <!--Submit button-->
-            <input type="submit" name="login-submit" id="login-submit" class="btn btn-login" value="Log In" style="width:30%;margin-top:10px;">
+    <h1>Log in</h1>
+    <h3>Use a local account to log in.</h3>
 
-        </form>
+    <form id="login-form" role="form" style="display: block;" data-bind="submit: login">
+        <!--Username-->
+        <div class="form-group">
+            <input type="text" name="username" id="username" data-bind="value: userName" tabindex="1" class="form-control" placeholder="Username" value="" style="width: 30%; margin-top: 30px;">
+        </div>
+        <!--Password-->
+        <div class="form-group">
+            <input type="password" name="password" id="password" data-bind="value: password" tabindex="2" class="form-control" placeholder="Password" style="width: 30%;">
+        </div>
+        <!--Submit button-->
+        <input type="submit" name="login-submit" id="login-submit" class="btn btn-login" value="Log In" style="width: 30%; margin-top: 10px;">
 
-    </div> <!-- /container -->
+    </form>
 
-    <script src="../Scripts/jquery-3.2.1.js"></script>
-    <script src="../bootstrap/js/bootstrap.min.js"></script>
-    <script src="../Scripts/navbar.js"></script>
-    <script src="../Scripts/knockout-3.4.2.js"></script>
-    <script src="../Scripts/app.js"></script>
+</div> <!-- /container -->
+
+<script src="../Scripts/jquery-3.2.1.js"></script>
+<script src="../bootstrap/js/bootstrap.min.js"></script>
+<script src="../Scripts/navbar.js"></script>
+<script src="../Scripts/knockout-3.4.2.js"></script>
+<script src="../Scripts/userLog.js"></script>
 
 </body>
 </html>
