--- a/MazeGame/Views/MultiPlayerPage.html
+++ b/MazeGame/Views/MultiPlayerPage.html
@@ -47,20 +47,23 @@
 
             <div class="form-group">
                 <label for="mazeName" class="col-sm-3 control-label">Name</label>
+                <!--name-->
                 <div class="col-sm-7">
                     <input type="text" class="form-control" id="mazeName" />
                 </div>
             </div>
             <div class="form-group">
+                <!--rows-->
                 <label for="rows" class="col-sm-3 control-label">Rows</label>
                 <div class="col-sm-7">
-                    <input type="text" class="form-control" id="rows" />
+                    <input type="text" class="form-control" id="rows"/>
                 </div>
             </div>
             <div class="form-group">
+                <!--cols-->
                 <label for="cols" class="col-sm-3 control-label">Cols</label>
                 <div class="col-sm-7">
-                    <input type="text" class="form-control" id="cols" />
+                    <input type="text" class="form-control" id="cols"/>
                 </div>
             </div>
             <!--start game-->
@@ -77,7 +80,7 @@
                 <canvas id="myCanvas" tabindex="1" class="maze-board" width="400" height="400" style="border:2px solid #000000;"></canvas>
             </div>
             <div class="col-sm-6">
-                <canvas id="opponentCanvas" tabindex="2" class="maze-board" width="400" height="400" style="border:2px solid #000000;"></canvas>
+                <canvas id="competitorCanvas" tabindex="2" class="maze-board" width="400" height="400" style="border:2px solid #000000;"></canvas>
             </div>
         </div>
     </div>
