--- a/MazeGame/Views/UserRankings.html
+++ b/MazeGame/Views/UserRankings.html
@@ -10,7 +10,7 @@
 <div class="w3-container">
     
     <div class="navigationbar"></div>
-    <div class="w3-container w3-padding-16">
+    <div class="w3-container w3-padding-32">
         <div class="w3-card-4">
             
             <div class="w3-container w3-black"><h2>Rank Table</h2></div>
@@ -40,7 +40,7 @@
 <script src="../Scripts/jquery-3.2.1.js"></script>
 <script src="../Scripts/navbar.js"></script>
 <link href="../Scripts/css/W3.css" rel="stylesheet" />
-<link href="../Scripts/navbar.css" rel="stylesheet">
+<link href="../Scripts/css/navbar.css" rel="stylesheet">
 <script src="../Scripts/knockout-3.4.2.js"></script>
 <script src="../Scripts/rankTable.js"></script>
 
